# hermes

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  SESSION_HANDOFF.md  pyproject.toml
hermes/: __init__.py  __main__.py  agent.py  config.py  mailbox.py  models.py  service.py  storage.py  tools.py
include/: hermes.h
mailboxes.d/: example.toml
ops/: hermes.service.example  setup-hermes-host.example.sh
scripts/: hermes-push-restart.sh  hermes-redeploy.sh  setup-shared-github-key.sh
src/: config.c  db.c  email.c  main.c  openai.c  tool_exec.c
tests/: test_config.c  test_config.py  test_mailbox.py  test_storage.py  test_tools.py
