[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-mail-agent"
version = "0.1.0"
description = "Multi-mailbox email coding agent powered by the OpenAI Responses API"
requires-python = ">=3.9"
dependencies = [
  "openai>=1.0.0",
  "tomli>=2.0.1",
]

[tool.setuptools]
packages = ["hermes"]
